--- a/ios/fubol/Info.plist
+++ b/ios/fubol/Info.plist
@@ -5,13 +5,20 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>FontAwsome.ttf</string>
-		<string>Foundation.tff</string>
-		<string>Ionicons.tff</string>
-		<string>MaterialIcons.tff</string>
-		<string>Entopy.tff</string>
-		<string>Feather.tff</string>
-		<string>AntDesign.tff</string>
-		<string>FontAwsome5_Regular.tff</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>Entopy.ttf</string>
+		<string>Feather.ttf</string>
+		<string>AntDesign.ttf</string>
+		<string>FontAwsome5_Regular.ttf</string>
+		<string>Fontisto.ttf</string>
+		<string>Zocial.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>FontAwsome5_Brands.ttf</string>
+		<string>FontAwsome5_Solid.ttf</string>
 	</array>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
